# ppmx

./: Cargo.toml
.github/workflows/: release.yaml  release.yml
recipes/: cloudflared.ppmx  dev-utils.ppmx  powerprofile-watch.ppmx  ppmx.ppmx  sc.ppmx  tbx.ppmx  vscodium-web.ppmx
src/: builder.rs  cli.rs  database.rs  main.rs  shared.rs
src/backend/: database.rs  installer.rs  mod.rs  planner.rs  recipe.rs  server.rs  source.rs
src/backend/recipes/: mod.rs  runtime.rs
src/executor/: build_context_api.rs  github_api.rs  install_context_api.rs  mod.rs
src/frontend/: mod.rs  package.rs  server.rs  source.rs
