[package]
name = "ppmx"
version = "0.1.0"
edition = "2024"

[dependencies]
allocative = "0.3.6"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
colog = "1.4.0"
log = "0.4.32"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = "1.0.228"
serde_json = "1.0.150"
starlark = "0.14.0"
starlark_derive = "0.14.0"
