[package]
name = "ppmx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6.5", features = ["unstable-dynamic"] }
colog = "1.4.0"
log = "0.4.32"
rhai = "1.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = { version = "3.3.0", features = ["json"] }
